workshop03/mydb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mydb-deployment
    labels:
        app: mydb
spec:
    replicas: 1
    selector:
        matchLabels:
            app: mydb
    strategy:
        rollingUpdate:
            maxSurge: 1
            maxUnavailable: 1
        type: RollingUpdate
    template:
        metadata:
            labels:
                app: mydb
        spec:
            volumes:
                - name: dbvol
                  persistentVolumeClaim:
                      claimName: mydb-pvc
            # scrub because corrupt filesystem which mysql can't use
            containers:
            - image: stackupiss/northwind-db:v1
              name: mydb
              imagePullPolicy: Always
              ports:
                  - containerPort: 3306
                    name: mydb
              volumeMounts:
              - mountPath: /var/lib/mysql
                # same as volume name above
                name: dbvol
