workshop03/myapp.yml
apiVersion: v1
kind: Service
metadata:
    name: myappv1-svc
spec:
    selector:
        app: myappv1
        version: v1
    type: ClusterIP
    ports:
    - name: myappv1
      port: 80
      targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: myappv1-deployment
    labels:
        app: myappv1
        version: v1
spec:
    replicas: 1
    selector:
        matchLabels:
            app: myappv1
            version: v1
    template:
        metadata:
            labels:
                app: myappv1
                version: v1
        spec:
            containers:
            - image: stackupiss/northwind-app:v1
              name: myappv1
              ports:
              - containerPort: 3000
                name: myappv1

---
apiVersion: v1
kind: Service
metadata:
    name: myappv2-svc
spec:
    selector:
        app: myappv2
        version: v1
    type: ClusterIP
    ports:
    - name: myappv2
      port: 80
      targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: myappv2-deployment
    labels:
        app: myappv2
        version: v1
spec:
    replicas: 1
    selector:
        matchLabels:
            app: myappv2
            version: v1
    template:
        metadata:
            labels:
                app: myappv2
                version: v1
        spec:
            containers:
            - image: stackupiss/northwind-app:v2
              name: myappv2
              ports:
              - containerPort: 3000
                name: myappv2
              imagePullPolicy: Always
